--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,7 @@
   }
 }
 
+/*
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
@@ -30,4 +31,4 @@ body {
   .text-balance {
     text-wrap: balance;
   }
-}
+} */
